{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 54,
  "lineage": "b1d50480-48b8-7522-c2bb-b55f0d3aa4bd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:221082206597:security-group/sg-0646531e256a0668d",
            "description": "Security group for the database",
            "egress": [],
            "id": "sg-0646531e256a0668d",
            "ingress": [],
            "name": "db-security-group",
            "name_prefix": "",
            "owner_id": "221082206597",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ff7a8c481a69cbce"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/24"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-23696597",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0646531e256a0668d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.db_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_dest_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8081,
            "id": "sgrule-114911065",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0646531e256a0668d",
            "self": false,
            "source_security_group_id": "sg-028cf6074bb942d5c",
            "to_port": 8081,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.db_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_prefix_list",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8083,
            "id": "sgrule-2914139311",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [
              "pl-0e364e753a2ba1157"
            ],
            "protocol": "tcp",
            "security_group_id": "sg-0646531e256a0668d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8083,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.db_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_self_reference",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/24"
            ],
            "description": null,
            "from_port": 23,
            "id": "sgrule-991856120",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0646531e256a0668d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 23,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.db_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_to_another_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-2638661882",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0646531e256a0668d",
            "self": false,
            "source_security_group_id": "sg-028cf6074bb942d5c",
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.db_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "restrict_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "192.168.0.0/16"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-3787796752",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0646531e256a0668d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.db_security_group"
          ]
        }
      ]
    }
  ]
}